--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -17,3 +17,27 @@ Style/Documentation:
 
 Gemspec/RequireMFA:
   Enabled: false
+
+Layout/FirstHashElementIndentation:
+  EnforcedStyle: consistent
+
+RSpec/ExampleLength:
+  Enabled: false
+
+Layout/EndAlignment:
+  EnforcedStyle: start_of_line
+
+Layout/ElseAlignment:
+  Enabled: false
+
+Metrics/PerceivedComplexity:
+  Enabled: false
+
+Metrics/MethodLength:
+  Enabled: false
+
+Metrics/CyclomaticComplexity:
+  Enabled: false
+
+Metrics/AbcSize:
+  Enabled: false
