--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,6 +5,8 @@ require:
 AllCops:
   TargetRubyVersion: 3.0
   NewCops: enable
+  Exclude:
+    - "spec/fixtures/**/*.rb"
 
 Style/StringLiterals:
   EnforcedStyle: double_quotes
